--- a/main_app/static/styles/main.css
+++ b/main_app/static/styles/main.css
@@ -39,6 +39,7 @@ h3 {
 
 p {
   font-size: 15px;
+  color: white;
 }
 
 .detail__name {
@@ -48,7 +49,7 @@ p {
 }
 
 .detail__container {
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
 .detail__page {
@@ -57,6 +58,7 @@ p {
     border-style: solid;
     border-color: red;
     margin: auto;
+    border-radius: 25px;
 }
 
 .movie-synopsis{
@@ -75,4 +77,17 @@ p {
 
 .detail_buttons {
     margin: 10px;
+}
+
+.movie_image {
+  box-shadow: 4px 2px 2px white;
+  border-radius: 25px;
+}
+
+.movie_name {
+  margin: 10px;
+}
+
+.movie_date {
+  margin: 10px;
 }
