--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
         <link rel="stylesheet"
               href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"
@@ -12,7 +13,7 @@
                 crossorigin="anonymous"></script>
         <link rel="stylesheet" href="{% static 'styles/main.css' %}" />
         <script src="{% static 'scripts/main.js' %}" defer></script>
-        <title>movie_tracker
+        <title>Stream Tracker
             {% block title %}{% endblock %}
         </title>
     </head>
@@ -21,7 +22,7 @@
              role="navigation"
              aria-label="main navigation">
             <div class="navbar-brand">
-                <a class="navbar-item" href="/">movie_tracker</a>
+                <a class="navbar-item" href="/">Stream Tracker</a>
                 <a role="button"
                    class="navbar-burger"
                    aria-label="menu"
@@ -31,11 +32,11 @@
                     <span aria-hidden="true"></span>
                 </a>
             </div>
-            <div class="navbar-menu navbar-start">
-                <a class="navbar-item" href="/about">About</a>
-            </div>
             <div class="navbar-menu navbar-end">
                 <a class="navbar-item" href="/movies">Movies</a>
+            </div>
+            <div class="navbar-menu navbar-end">
+                <a class="navbar-item" href="/streaming_playlist">Streaming Playlist</a>
             </div>
         </nav>
         <div class="main_content_container">
