--- a/main_app/templates/movie_list.html
+++ b/main_app/templates/movie_list.html
@@ -7,7 +7,7 @@
 <br><br>
 <div class="gallery">
   {% for movie in movies %}
-  <a href="">
+  <a href="{% url 'movie_detail' movie.pk %}">
     <div class="card">
       <div class="card-image">
         <figure class="image is-square">
@@ -15,7 +15,7 @@
         </figure>
       </div>
       <div class="card-header has-background-danger-dark">
-        <p class="card-header-title">{{movie.name}}</p>
+        <p class="card-header-title" style="color:white">{{movie.name}}</p>
       </div>
     </div>
   </a>
