--- a/main_app/templates/streaming_playlist.html
+++ b/main_app/templates/streaming_playlist.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Stream Tracker Home</h1>
+
+<h1>Streaming Playlist Landing Page</h1>
+
 {% endblock %}
