--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -18,7 +18,7 @@
         </title>
     </head>
     <body>
-        <nav class="navbar is-black"
+        <nav class="navbar has-background-danger-dark navigation"
              role="navigation"
              aria-label="main navigation">
             <div class="navbar-brand">
@@ -27,9 +27,9 @@
                    class="navbar-burger"
                    aria-label="menu"
                    aria-expanded="false">
-                    <span aria-hidden="true"></span>
-                    <span aria-hidden="true"></span>
-                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true" class="burger-text"></span>
+                    <span aria-hidden="true" class="burger-text"></span>
+                    <span aria-hidden="true" class="burger-text"></span>
                 </a>
             </div>
             <div class="navbar-menu navbar-end">
