--- a/main_app/templates/movie_detail.html
+++ b/main_app/templates/movie_detail.html
@@ -11,7 +11,7 @@
                     <i class="fas fa-edit"></i>
                 </span>
             </a>
-            <a href="" class="button is-danger">
+            <a href="{% url 'movie_delete' movie.pk %}" class="button is-danger">
                 <span class="icon">
                     <i class="fas fa-trash-alt"></i>
                 </span>
