--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -13,7 +13,7 @@
                 crossorigin="anonymous"></script>
         <link rel="stylesheet" href="{% static 'styles/main.css' %}" />
         <script src="{% static 'scripts/main.js' %}" defer></script>
-        <title>Stream Tracker
+        <title>Movie Database
             {% block title %}{% endblock %}
         </title>
     </head>
@@ -22,7 +22,7 @@
              role="navigation"
              aria-label="main navigation">
             <div class="navbar-brand">
-                <a class="navbar-item" href="/">Stream Tracker</a>
+                <a class="navbar-item" href="/">Movie Database</a>
                 <a role="button"
                    class="navbar-burger"
                    aria-label="menu"
@@ -36,7 +36,7 @@
                 <a class="navbar-item" href="/movies">Movies</a>
             </div>
             <div class="navbar-menu navbar-end">
-                <a class="navbar-item" href="/streaming_playlist">Streaming Playlist</a>
+                <a class="navbar-item" href="/collections">Collections</a>
             </div>
         </nav>
         <div class="main_content_container">
