--- a/main_app/templates/movie_update.html
+++ b/main_app/templates/movie_update.html
@@ -1,11 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
-
-<h1>Update {{movie.name}}</h1>
-
-<form action="" method="post">
-    {% csrf_token %} {{form.as_p}}
-      <input type="submit" value="Submit" />
-  </form>
-
+<div class="form_styling">
+  <h1>Update {{movie.name}}</h1>
+  <form action="" method="post">
+      {% csrf_token %} {{form.as_p}}
+        <input type="submit" value="Submit" />
+    </form>
+</div>
 {% endblock %}
