--- a/main_app/templates/movie_create.html
+++ b/main_app/templates/movie_create.html
@@ -1,12 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Add a Movie</h1>
-<form method="post">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="Submit">
-</form>
-
+<div class="form_styling">
+    <h1>Add a Movie</h1>
+    <br>
+    <form method="post">
+        {% csrf_token %}
+        {{form.as_p}}
+        <input type="submit" value="Submit">
+    </form>
+</div>
 
 {% endblock %}
