--- a/main_app/templates/movie_detail.html
+++ b/main_app/templates/movie_detail.html
@@ -53,6 +53,34 @@
             <div class="cast">
                 <span>{{cast.name}} - </span>
                 <span>{{cast.role}}</span>
+                <span>
+                    <div class="dropdown">
+                      <div class="dropdown-trigger">
+                        <button
+                          class="button"
+                          aria-haspopup="true"
+                          aria-controls="dropdown-menu"
+                        >
+                          <span>Add to Collection</span>
+                          <span class="icon is-small">
+                            <i class="fas fa-angle-down" aria-hidden="true"></i>
+                          </span>
+                        </button>
+                      </div>
+                      <div class="dropdown-menu" id="dropdown-menu" role="menu">
+                        <div class="dropdown-content">
+                          {% for collection in collections %}
+                          <a
+                            href="{% url 'collection_cast_assoc' collection.pk cast.pk %}?assoc=add"
+                            class="dropdown-item"
+                          >
+                            {{collection.title}}
+                          </a>
+                          {% endfor %}
+                        </div>
+                      </div>
+                    </div>
+                  </span>
             </div>
             {% empty %}
             <article class="notice">
