--- a/main_app/templates/movie_list.html
+++ b/main_app/templates/movie_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1 class="title pt-5">Movies</h1>
+<h1 class="title pt-5">Matt's Movie Database</h1>
 <a class="button is-dark add-movie-button" href="{% url 'movie_create' %}">Add a Movie</a>
 <br><br>
 <div class="gallery">
