--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,4 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Movie Database Home</h1>
+<div class="main_home_container">
+    <h1 class="home_header">Movie Database Home</h1><br>
+    <h1 class="home_subheader">Welcome to Matt's Movie Database!</h1><br>
+    <p class="home_content">Matt's movie database is a dynamic movie tracking databse. Users can signup for an account and create a dynamic collection of movies. Movies can easily be created and updated on the movie index and detail pages respectively. If you already have an account, simply click login at the top right, otherwise feel free to signup and get started adding movies!</p>
+</div>
 {% endblock %}
