--- a/main_app/templates/collections.html
+++ b/main_app/templates/collections.html
@@ -2,27 +2,26 @@
 {% block content %}
 <div class="collections">
     {% for collection in collections %}
+        {% if collection.user == request.user %}
+            <div class="collection mb-5">
+                <h3 class="title is-3 has-text-white">{{ collection.title }}</h3>
+                <hr />
 
-        <div class="collection mb-5">
-            <h3 class="title is-3 has-text-white">{{collection.title}}</h3>
-            <hr />
-
-            {% for cast in collection.casts.all %}
-
-                <div class="cast">
-                    <span><b>{{cast.name}}</b></span>
-                    <span>{{cast.role}}</span>
-                    <span>
-                        <a href="{% url 'collection_cast_assoc' collection.pk cast.pk %}?assoc=remove" class="button is-danger is-outlined">
-                        <span class="icon is-small">
-                            <i class="fas fa-trash"></i>
+                {% for cast in collection.casts.all %}
+                    <div class="cast">
+                        <span><b>{{ cast.name }}</b></span>
+                        <span>{{ cast.role }}</span>
+                        <span>
+                            <a href="{% url 'collection_cast_assoc' collection.pk cast.pk %}?assoc=remove" class="button is-danger is-outlined">
+                                <span class="icon is-small">
+                                    <i class="fas fa-trash"></i>
+                                </span>
+                            </a>
                         </span>
-                        </a>
-                    </span>
-                </div>
-
-            {% endfor %}
-        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
     {% empty %} 
         <div class="collection mb-5">"There are no actors in this collection"</div>
     {% endfor %}
