Added a button to create new collections.

--- a/main_app/templates/collections.html
+++ b/main_app/templates/collections.html
@@ -26,4 +26,5 @@
         <div class="collection mb-5">"There are no actors in this collection"</div>
     {% endfor %}
 </div>
+<a href="{% url 'create_collection' %}" class="button is-dark">Create New Collection</a>
 {% endblock %}
