Styled the forms.

--- a/main_app/templates/movie_update.html
+++ b/main_app/templates/movie_update.html
@@ -1,10 +1,82 @@
 {% extends 'base.html' %}
 {% block content %}
+<style>
+  .form_styling {
+      width: 400px;
+      margin: 0 auto;
+      padding: 20px;
+      background-color: hsl(348, 86%, 43%);
+      border: 1px solid black;
+      border-radius: 5px;
+  }
+
+  .form_styling h1 {
+      text-align: center;
+      margin-bottom: 20px;
+      font-size: xx-large;
+      color: black;
+  }
+
+  .form_styling form {
+      display: flex;
+      flex-direction: column;
+  }
+
+  .form_styling label {
+      margin-bottom: 10px;
+      font-weight: bold;
+  }
+
+  .form_styling input[type="text"],
+  .form_styling textarea {
+      padding: 10px;
+      font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      resize: vertical;
+      
+  }
+
+  .form_styling input[type="submit"] {
+      padding: 10px;
+      font-size: 16px;
+      background-color: hsl(0, 0%, 21%);
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+  }
+
+  .form_styling input[type="submit"]:hover {
+      background-color: grey;
+  }
+</style>
+
 <div class="form_styling">
-  <h1>Update {{movie.name}}</h1>
-  <form action="" method="post">
-      {% csrf_token %} {{form.as_p}}
-        <input type="submit" value="Submit" />
-    </form>
+  <h1>Update {{ movie.name }}</h1>
+  <form action="" method="post" class="has-text-black">
+    {% csrf_token %}
+    <div style="display: flex; flex-direction: column;">
+      <label for="id_name">Name:</label>
+      {{ form.name }}
+    </div>
+    <div style="display: flex; flex-direction: column;">
+      <label for="id_image">Image URL:</label>
+      {{ form.image }}
+    </div>
+    <div style="display: flex; flex-direction: column;">
+      <label for="id_release_date">Release Date:</label>
+      {{ form.release_date }}
+    </div>
+    <div style="display: flex; flex-direction: column;">
+      <label for="id_synopsis">Synopsis:</label>
+      {{ form.synopsis }}
+    </div>
+    <div style="display: flex; flex-direction: column;">
+      <label for="id_rating">Rating:</label>
+      {{ form.rating }}
+    </div><br>
+    <input type="submit" value="Submit" />
+  </form>
 </div>
 {% endblock %}
