--- a/main_app/templates/movie_detail.html
+++ b/main_app/templates/movie_detail.html
@@ -51,7 +51,7 @@
             </form>
             {% for cast in movie.casts.all %}
             <div class="cast">
-                <span>{{cast.name}} - </span>
+                <span>{{cast.name}}</span>
                 <span>{{cast.role}}</span>
                 <span>
                     <div class="dropdown">
